# BusViewRust

./: .env  Cargo.toml  contacts.db  test.json
src/: main.rs
src/controllers/: access.rs  buses.rs  mod.rs  structures.rs
src/emulation/: emulation.rs  mod.rs  structures.rs
src/helpers/: mod.rs  update_data.rs  utils.rs
static/css/: styles-1.2.0.css  styles-bar-1.0.8.css  trips-1.0.4.css  tutorials-1.0.2.css
static/error/: 403.html  404.html
static/js/: busRouteStops.json  bus_stops.js  planTrip_1.0.8.js  savedTrips_1.0.6.js  script_1.1.3.7.js  sidebar.js  theme.js
templates/: index.html
templates/favoriteStops/: index.html
templates/planTrip/: index.html
templates/savedTrips/: index.html
templates/settings/: index.html
templates/stopsMap/: index.html
templates/tutorials/: index.html
