[package]
name = "BusView-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io"] }

jsonwebtoken = "9.3"
chrono = "0.4"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
dotenvy = "0.15"

thiserror = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

reqwest = { version = "0.12", features = ["json"] }
gtfs-rt = "0.2"
prost = "0.8"
zip = "0.6"
